compile error undefined reference to ...

--- a/1050/Makefile
+++ b/1050/Makefile
@@ -2,6 +2,6 @@ all : LiquidMedicine
 LiquidMedicine : LiquidMedicine
 	gcc -W -Wall -o LiquidMedicine LiquidMedicine.o
 LiquidMedicine.o : LiquidMedicine.cpp
-	gcc -I /usr/include/c++/4.8/ -c LiquidMedicine.o LiquidMedicine.cpp 
+	gcc -W =Wall -c -o LiquidMedicine.o LiquidMedicine.cpp 
 clean :
 	rm -rf *.o LiquidMedicine
