LiquidMedicine - QUIZ: https://www.acmicpc.net/problem/1050

--- a/1050/Makefile
+++ b/1050/Makefile
@@ -1,7 +1,5 @@
 all : LiquidMedicine
-LiquidMedicine : LiquidMedicine
-	gcc -W -Wall -o LiquidMedicine LiquidMedicine.o
-LiquidMedicine.o : LiquidMedicine.cpp
-	gcc -W =Wall -c -o LiquidMedicine.o LiquidMedicine.cpp 
+LiquidMedicine : LiquidMedicine.cpp
+	g++ -W -Wall -o LiquidMedicine LiquidMedicine.cpp
 clean :
-	rm -rf *.o LiquidMedicine
+	rm -rf LiquidMedicine
